[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/enemies/bullet_hell/simple_bullet.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.415686, 0.984314, 0.478431, 1 )

[sub_resource type="SphereMesh" id=3]
material = SubResource( 2 )

[node name="SimpleBullet" type="Area" groups=[
"bullets",
]]
collision_layer = 0
collision_mask = 18
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="KillTimer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_hit_player"]
[connection signal="body_entered" from="." to="." method="_on_hit_environment"]
[connection signal="timeout" from="KillTimer" to="." method="die"]
